# nova

./: pyproject.toml
nova/: utils.py
nova/config/: __init__.py
nova/speech/: whisper.py
