[project]
name = "nova"
version = "0.1.0"
description = "My personal AI agent to help with RL and Robotics research"
authors = [{ name = "Ryan Partridge", email = "rpartridge101@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "ffmpeg (>=1.4,<2.0)",
    "llvmlite (>=0.43.0,<0.44.0)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "numba (>=0.60.0,<0.61.0)",
    "torch (>=2.5.1,<3.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "openai-whisper (>=20240930,<20240931)",
    "pydantic (>=2.10.5,<3.0.0)",
    "logfire (>=3.1.1,<4.0.0)",
    "pydantic-ai (>=0.0.18,<0.0.19)",
    "fastapi (>=0.115.6,<0.116.0)",
]

[tool.poetry.dependencies]
torch = { source = "pytorch" }
torchvision = { source = "pytorch" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"


[tool.poetry.group.ci.dependencies]
git-cliff = "^2.7.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov=nova tests/"
